[gd_scene load_steps=5 format=3 uid="uid://c3c3x3avdcc6e"]

[ext_resource type="Script" path="res://Assets/GUI/Inventory/Scripts/GuiInventory.gd" id="1_bmqak"]
[ext_resource type="Texture2D" uid="uid://osinuhn8hrvn" path="res://Assets/GUI/Inventory/Sprites/InventoryBase_NinePatch.png" id="1_ey6jo"]
[ext_resource type="Resource" uid="uid://cdl2jiyds7hs" path="res://Assets/Characters/Player/Inventory/Resource/player_inventory.tres" id="2_cpyqw"]
[ext_resource type="PackedScene" uid="uid://c1660idr2wltj" path="res://Assets/Characters/Player/Shaders/Debug/debug_skin_map.tscn" id="3_wvu5t"]

[node name="GuiInventory" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
script = ExtResource("1_bmqak")
inventory = ExtResource("2_cpyqw")

[node name="SkinDebugRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 90.3333
offset_top = 59.6667
offset_right = 124.333
offset_bottom = 76.6667
texture = ExtResource("1_ey6jo")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="DebugSkinMap" parent="SkinDebugRect" instance=ExtResource("3_wvu5t")]
position = Vector2(17, 8.66667)

[node name="PlayerInventory" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 87.0
offset_bottom = 112.0
texture = ExtResource("1_ey6jo")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
